--- a/index.html
+++ b/index.html
@@ -4,12 +4,18 @@
         <div id='character' style='position:absolute; top:100px; left:450px; background-image: url("img/down1.png"); width:59px; height:86px;'></div>
     </div>
     <script type="text/javascript">
-	    var leftValue = 450, topValue = 100;
+	    var leftValue = 450, topValue = 100, direction = 'down', step = 1;
 
     	function update(){
+			if(step == 1){
+				step = 2;
+			}
+			else {
+				step = 1;
+			}
     		document.getElementById("character").style.left = leftValue+"px";
     		document.getElementById("character").style.top = topValue+"px";
-			document.getElementById("character").style.backgroundImage = "url('img/"+direction+"1.png')";
+			document.getElementById("character").style.backgroundImage = "url('img/"+direction+step+".png')";
     	}
 
 		document.onkeydown = function(e){
@@ -26,8 +32,9 @@
 				topValue = topValue + 10;
 				direction = 'down';
     		}
-    		else if (e.keyCode == 38 && topValue > 0){ //UP
+    		else if (e.keyCode == 38 && topValue > 0){ // UP
 				topValue = topValue - 10;
+				direction = 'top';
 			} 
     		update();
 
